syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy";
option java_outer_classname = "KeyManagerServiceOuterClass";

package br.com.zupacademy;

service KeyManagerService {
  rpc keyRegistration (PixKeyRegistrationRequest) returns (PixKeyRegistrationResponse) {}
}

message  PixKeyRegistrationRequest {
  string clientId = 1;
  KeyTypeRequest keyType = 2;
  string keyValue = 3;
  AccountType account = 4;

}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

enum KeyTypeRequest {
  UNKNOWN_KEY = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

message PixKeyRegistrationResponse {
  string pixId = 1;
  string clientId = 2;
}